# redisfi-vss

./: Dockerfile  README.md  pyproject.toml
ci/: build-vss.yml
data/: filemap.json
vss/: cli.py  db.py  msft_loader.py  wsapi.py
