[tool.poetry]
name = "VSS"
version = "0.1.0"
description = "VSS Helper Tool for RedisFI"
authors = ["Adi Wabisabi <adi.wabisabi@redis.com>"]

[tool.poetry.scripts]
VSS = "vss.cli:run"

[tool.poetry.dependencies]
python = "^3.8"
cleo = "^0.8.1"
pandas = "^1.4.1"
numpy = "^1.22.3"
redis = "4.1.4"
pyarrow = "^7.0.0"
fastparquet = "^0.8.0"
prefect = "^1.1.0"
Flask = "^2.0.3"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
